# actix-sitemap-rs

./: Cargo.toml  README.md  sitemaps.xml
src/: lib.rs  main.rs
