[package]
name = "actix-sitemaps-rs"
version = "0.1.0"
edition = "2021"
authors = ["shadawck <shadawck@protonmail.com>"]
description = "Add a static sitemap to your actix-web app."
readme = "README.md"
repository = "https://github.com/shadawck/actix-sitemap-rs"
license = "MIT OR Apache-2.0"
keywords = ["actix", "sitemap", "web", "seo"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0           # Optimization level.
debug = true            # Include debug info.
debug-assertions = true # Enables debug assertions.
overflow-checks = true  # Enables runtime integer overflow checks.
lto = false             # Sets link-time optimization.
panic = 'unwind'        # The panic strategy.
incremental = true      # Incremental compilation.
codegen-units = 16      # Number of code generation units.
rpath = false           # Sets the rpath linking option.

[profile.release]
incremental = false
lto = true

[dependencies]
actix-files = "0.6.5"
actix-web = { version = "4.5.1", default-features = false, features = [
    "macros",
] }
